fix: align the "About Us" heading; add a link to the "About Us" page; deleted  variable

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,10 +1,8 @@
-@import "./variables";
-
 html,
 body {
 	padding: 0;
 	margin: 0;
-	font-family: $main-font, sans-serif;
+	font-family: 'Work Sans', sans-serif;
 }
 
 a {
